--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tra cứu hợp đồng - Sóc Trăng</title>
+  <title>Tra cứu hợp đồng - Sóc Trăng, Hậu Giang</title>
   <style>
     body { 
       margin: 0; padding: 20px; height: 100vh;
@@ -84,7 +84,7 @@
   <img src="logo.png" alt="Logo Nam Thắng" class="logo">
 
   <!-- Tiêu đề -->
-  <h2>Tra cứu hợp đồng - Sóc Trăng</h2>
+  <h2>Tra cứu hợp đồng - Sóc Trăng, Hậu Giang</h2>
 
   <!-- Thông báo -->
   <div class="message">Hãy bấm vào nút "Truy cập Ứng dụng" bên dưới để tiếp tục.<br>Khi tạo hợp đồng nhớ kiểm tra đầy đủ thông tin trước khi bấm lưu.</br></div>
