--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <h2>Tra cứu hợp đồng - Sóc Trăng, Hậu Giang</h2>
 
   <!-- Thông báo -->
-  <div class="message">Hãy bấm vào nút "Truy cập Ứng dụng" bên dưới để tiếp tục.<br>Khi tạo hợp đồng nhớ kiểm tra đầy đủ thông tin trước khi bấm lưu.</br></div>
+  <div class="message">Hãy bấm vào nút "Truy cập Ứng dụng" bên dưới để tiếp tục.<br>HÃY CHUNG TAY ĐÓNG GÓP VỊ TRÍ VÁ VỎ, SỬA CHỮA XE ĐỂ HỖ TRỢ CÁC TÀI XẾ</br></div>
 
   <!-- Nút truy cập -->
   <button class="button" onclick="goToApp()">Truy cập Ứng dụng</button>
