--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tra cứu hợp đồng - Sóc Trăng, Hậu Giang</title>
+  <title>Tra cứu hợp đồng - Sóc Trăng, Hậu Giang, Cần Thơ</title>
   <style>
     body { 
       margin: 0; padding: 20px; height: 100vh;
