--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <img src="logo.png" alt="Logo Nam Thắng" class="logo">
 
   <!-- Tiêu đề -->
-  <h2>Tra cứu hợp đồng - Sóc Trăng, Hậu Giang</h2>
+  <h2>Tra cứu hợp đồng - Sóc Trăng, Hậu Giang, Cần Thơ</h2>
 
   <!-- Thông báo -->
   <div class="message">Hãy bấm vào nút "Truy cập Ứng dụng" bên dưới để tiếp tục.<br>HÃY CHUNG TAY ĐÓNG GÓP VỊ TRÍ VÁ VỎ, SỬA CHỮA XE ĐỂ HỖ TRỢ CÁC TÀI XẾ</br></div>
